# splade

./: .gitmodules  README.md  pyproject.toml
mymodel/: configuration.py  debug.yaml  experiment.py  normal.yaml
splade/: _common.yaml  debug.yaml  experiment.py  normal.yaml  normal_DistilMSE.yaml  normal_doc.yaml  pre_experiment.py
