[project]
name = "splade"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datamaestro>=1.6.2",
    "datamaestro-text>=2026.1.1",
    "experimaestro",
    "experimaestro-ir[anserini,neural]",
    "ir-datasets",
    "pandas>=2.3.1",
    "tensorboard>=2.20.0",
]

[tool.uv]

override-dependencies = [
    "nmslib ; sys_platform == 'never'",
]

[tool.uv.sources]
ir-datasets = { git = "https://github.com/bpiwowar/ir_datasets.git" }
experimaestro-ir = { git = "https://github.com/experimaestro/experimaestro-ir", rev = "7cd124e" }

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
