[project]
name = "splade"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datamaestro>=1.6.2",
    "datamaestro-text>=2026.1.1",
    "experimaestro[carbon]>=2.0.0b22",
    "experimaestro-ir[anserini,neural]",
    "faiss-cpu>=1.13.2",
    "ir-datasets",
    "pandas>=2.3.1",
    "tensorboard>=2.20.0",
]

[tool.uv]

override-dependencies = [
    "nmslib ; sys_platform == 'never'",
]

[tool.uv.sources]
ir-datasets = { git = "https://github.com/bpiwowar/ir_datasets.git" }
experimaestro-ir = { git = "https://github.com/experimaestro/experimaestro-ir", rev = "f7f1036" }

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
