[project]
name = "splade"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datamaestro>=1.6.2",
    "datamaestro-text>=2026.1.1",
    "experimaestro[carbon]>=2.0.5",
    "experimaestro-ir[anserini,neural]",
    "faiss-cpu>=1.13.2",
    "ir-datasets",
    "pandas>=2.3.1",
    "tensorboard>=2.20.0",
    "accelerate",
]

[tool.uv]

override-dependencies = [
    "nmslib ; sys_platform == 'never'",
]

[tool.uv.sources]
ir-datasets = { git = "https://github.com/bpiwowar/ir_datasets.git" }
experimaestro-ir = { path = "experimaestro-ir", editable = true }

[dependency-groups]
dev = [
    "docutils>=0.21.2",
    "pytest>=8.4.2",
    "sphinx>=8.1.3",
    "sphobjinv>=2.3.1",
]
